<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="games_array">
        <item>Wolfenstein: Enemy Territory</item>
    </string-array>

    <string name="app_name">Arcon</string>
    <string name="action_settings">Settings</string>
    <string name="connectButton">Connect</string>
    <string name="title_activity_arcon">Arcon</string>
    <string name="sendButton">Send</string>
    <string name="serverHint">IP</string>
    <string name="portHint">Port</string>
    <string name="passHint">Rcon Password</string>
    <string name="mainTitle">Arcon</string>
    <string name="checkbox">Remember</string>
    <string name="serverName">serverName</string>
    <string name="gameName">Wolfenstein ET: </string>

</resources>