<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wolfconbackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ArconActivity" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameName"
        android:textColor="#FFF" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_alignRight="@+id/editText5"
      android:layout_toRightOf="@id/textView3"
      android:gravity="center"
      android:text="@string/serverName" 
      android:textColor="#FFF"/>

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/editText4"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textView2"
        android:background="#00000000"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="true"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="@dimen/activity_vertical_24"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="clip_horizontal"
        android:inputType="textMultiLine"
        android:linksClickable="false"
        android:longClickable="false"
        android:scrollHorizontally="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:selectAllOnFocus="false"
        android:textAlignment="gravity"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText4"
        android:layout_alignRight="@+id/editText5"
        android:layout_below="@+id/editText5"
        android:background="#00000000"
        android:onClick="sendCommand"
        android:text="@string/sendButton"
        android:textColor="#FFF" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/button2"
        android:background="#00000000"
        android:ems="10"
        android:inputType="text"
        android:minHeight="32dp" 
        android:textColor="#FFF">

        <requestFocus />
    </EditText>



</RelativeLayout>
